# eflips-lca

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  EFLIPS_MODEL_CHANGES.md  LCA_PARAMETER_GUIDE.md  TODO.md  design_document.md  pyproject.toml
eflips/lca/: __init__.py  calculation.py  dataclasses.py  extraction.py  open_lca_data.py  parameter_generation.py  util.py
eflips/lca/bus_eflips_anne/: bus.ini  bus_results.json  cases_bus.py  lca.py  utilslcca.py
tests/: conftest.py  test_calculation.py  test_dataclasses.py  test_extraction.py  test_open_lca_data.py  test_util.py
